Fix sidebar on mobile

--- a/raporty_siecobywatelska_pl/assets/sass/project.scss
+++ b/raporty_siecobywatelska_pl/assets/sass/project.scss
@@ -14,14 +14,26 @@
   height: 100vh;
 }
 .sidebar {
+  background: black;
+  color: white;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
+  width: calc(100% - 90px);
   z-index: 2;
-  width: 200px;
-  background: black;
-  color: white;
+  transform: translateX(-100%);
+  transition: .2s;
+
+  .sidebar-open & {
+    transform: translateX(0);
+  }
+
+  @include media-breakpoint-up(md) {
+    //position: fixed;
+    width: 200px;
+    transform: translateX(0);
+  }
 }
 .sidebar__header {
   height: 75px;
@@ -34,8 +46,10 @@
 
 .main-panel {
   position: relative;
-  float: right;
-  width: calc(100% - 200px);
+  @include media-breakpoint-up(md) {
+    float: right;
+    width: calc(100% - 200px);
+  }
 }
 
 .user-info__user {
